@@ -2,7 +2,10 @@ systemd_system_unit_dir = get_option('systemd_system_unit_dir')
 if systemd_system_unit_dir == ''
   systemd = dependency('systemd', required: false)
   if systemd.found()
-      systemd_system_unit_dir = systemd.get_variable(pkgconfig: 'systemdsystemunitdir')
+      systemd_system_unit_dir = systemd.get_variable(
+        pkgconfig: 'systemdsystemunitdir',
+        pkgconfig_define: ['prefix', get_option('prefix')],
+      )
   endif
 endif
 if systemd_system_unit_dir == ''
