@@ -5,6 +5,7 @@ ver 0.23.14 (not yet released)
 * mixer
   - wasapi: fix problem setting volume
 * more libfmt 10 fixes
+* fix auto-detected systemd unit directory
 
 ver 0.23.13 (2023/05/22)
 * input
